--- a/cvs-health.html
+++ b/cvs-health.html
@@ -50,9 +50,9 @@
         <div class="nav-content">
             <a href="/" class="logo">JO</a>
             <ul>
-                <li><a href="../index.html#work">Work</a></li>
-                <li><a href="../index.html#about">About</a></li>
-                <li><a href="../index.html#contact">Contact</a></li>
+                <li><a href="index.html#work">Work</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
             <div class="social-links">
                 <a href="https://www.threads.net/@yourusername" target="_blank">Threads</a>
@@ -76,7 +76,7 @@
             <h2>The Role</h2>
             <p>As the Lead Design Systems Designer at CVS Health, I'm responsible for maintaining and evolving our comprehensive pattern library that serves multiple product teams.</p>
             
-            <img src="../assets/cvs.png" alt="CVS Health Pattern Library" class="project-image">
+            <img src="cvs.png" alt="CVS Health Pattern Library" class="project-image">
             
             <h2>Key Contributions</h2>
             <ul>
