--- a/index.html
+++ b/index.html
@@ -30,39 +30,39 @@
         </section>
 
         <section id="work">
-            <a href="projects/credit-one.html" class="project">
+            <a href="credit-one.html" class="project">
                 <span class="project-number">01</span>
                 <h2>Credit One Bank</h2>
                 <p>I worked on building a 0-1 design system for C1B's internal tools and it saved the company hundreds of thousands of dollars and increased work efficiency by 40%.</p>
                 <div class="project-overlay">
-                    <img src="assets/c1b.jpg" alt="Credit One Bank Project Preview">
+                    <img src="c1b.jpg" alt="Credit One Bank Project Preview">
                 </div>
             </a>
 
-            <a href="projects/cvs-health.html" class="project">
+            <a href="cvs-health.html" class="project">
                 <span class="project-number">02</span>
                 <h2>CVS Health</h2>
                 <p>I'm the lead design systems designer for our pattern library and I've helped increase design and development for our product launches.</p>
                 <div class="project-overlay">
-                    <img src="assets/cvs.png" alt="CVS Health Project Preview">
+                    <img src="cvs.png" alt="CVS Health Project Preview">
                 </div>
             </a>
 
-            <a href="projects/orgspace.html" class="project">
+            <a href="orgspace.html" class="project">
                 <span class="project-number">03</span>
                 <h2>Orgspace</h2>
                 <p>Built a 0-1 design system in 3 months utilizing Figma, Tailwind, and Storybook.</p>
                 <div class="project-overlay">
-                    <img src="assets/org.jpg" alt="Orgspace Project Preview">
+                    <img src="org.jpg" alt="Orgspace Project Preview">
                 </div>
             </a>
 
-            <a href="projects/crtside.html" class="project">
+            <a href="crtside.html" class="project">
                 <span class="project-number">04</span>
                 <h2>Crtside</h2>
                 <p>Developed a comprehensive design system for a modern fintech platform, focusing on accessibility and scalability.</p>
                 <div class="project-overlay">
-                    <img src="assets/crt.jpg" alt="Crtside Project Preview">
+                    <img src="crt.jpg" alt="Crtside Project Preview">
                 </div>
             </a>
         </section>
@@ -74,7 +74,7 @@
                     <p>I specialize in creating scalable design systems that bridge the gap between design and development. My approach focuses on simplicity, consistency, and user experience.</p>
                 </div>
                 <div class="about-image">
-                    <img src="assets/olenick.jpg" alt="Profile photo" />
+                    <img src="olenick.jpg" alt="Profile photo" />
                 </div>
             </div>
         </section>
@@ -113,7 +113,7 @@
                     <a href="https://www.linkedin.com/in/yourusername" target="_blank" class="cta-button">Connect on LinkedIn</a>
                 </div>
                 <div class="contact-image">
-                    <img src="assets/mentorship.jpg" alt="Contact illustration" />
+                    <img src="mentorship.jpg" alt="Contact illustration" />
                 </div>
             </div>
         </section>
