--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="announcement-banner">
         <div class="content">
             <span>🎁 Download my free digital products</span>
-            <a href="https://jacobolenick.gumroad.com" target="_blank">Visit Gumroad</a>
+            <a href="https://jacobolenick1.gumroad.com" target="_blank">Visit Gumroad</a>
             <button class="close-button" aria-label="Close banner">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <line x1="18" y1="6" x2="6" y2="18"></line>
