--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="social-links">
-                <a href="https://www.threads.net/@yourusername" target="_blank">Threads</a>
-                <a href="https://bsky.app/profile/yourusername" target="_blank">Bluesky</a>
-                <a href="https://www.linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+                <a href="https://www.threads.net/@jacob.olenick" target="_blank">Threads</a>
+                <a href="https://bsky.app/profile/jacobolenick" target="_blank">Bluesky</a>
+                <a href="https://www.linkedin.com/in/jacobmolenick" target="_blank">LinkedIn</a>
             </div>
         </div>
     </nav>
@@ -123,7 +123,7 @@
                             Linkedin help and positioning
                         </li>
                     </ul>
-                    <a href="https://www.linkedin.com/in/yourusername" target="_blank" class="cta-button">Connect on LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/jacobmolenick" target="_blank" class="cta-button">Connect on LinkedIn</a>
                 </div>
                 <div class="contact-image">
                     <img src="mentorship.jpg" alt="Contact illustration" />
@@ -135,7 +135,7 @@
             <div class="newsletter-content">
                 <h2>UX Naviagtor Newsletter</h2>
                 <p>Subscribe to my LinkedIn newsletter for insights on design systems, product design, navigating the UX industrtryand career growth.</p>
-                <a href="https://www.linkedin.com/newsletters/your-newsletter" target="_blank" class="cta-button">Subscribe to Newsletter</a>
+                <a href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7252893645844930560" target="_blank" class="cta-button">Subscribe to Newsletter</a>
             </div>
         </section>
     </main>
