--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             </button>
             <a href="/" class="logo">JO</a>
             <ul>
-                <li><a href="#work">Work</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li style="--item-index: 0"><a href="#work">Work</a></li>
+                <li style="--item-index: 1"><a href="#about">About</a></li>
+                <li style="--item-index: 2"><a href="#contact">Contact</a></li>
             </ul>
             <div class="social-links">
                 <a href="https://www.threads.net/@jacob.olenick" target="_blank">Threads</a>
