--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <p>I specialize in creating scalable design systems that bridge the gap between design and development. My approach focuses on simplicity, consistency, and user experience.</p>
                 </div>
                 <div class="about-image">
-                    <img src="olenick.jpg" alt="Profile photo" />
+                    <img src="jake.jpg" alt="Profile photo" />
                 </div>
             </div>
         </section>
