--- a/crtside.html
+++ b/crtside.html
@@ -212,6 +212,6 @@
         <p>&copy; 2024</p>
     </footer>
 
-    <script src="../script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
