--- a/orgspace.html
+++ b/orgspace.html
@@ -234,7 +234,7 @@
         </svg>
     </a>
 
-    <script src="../script.js"></script>
+    <script src="/script.js"></script>
     <script>
         // Back to top button functionality
         const backToTop = document.querySelector('.back-to-top');
