--- a/credit-one.html
+++ b/credit-one.html
@@ -63,30 +63,7 @@
                 <a href="https://bsky.app/profile/jacobolenick" target="_blank">Bluesky</a>
                 <a href="https://www.linkedin.com/in/jacobmolenick" target="_blank">LinkedIn</a>
                 <button class="theme-toggle" aria-label="Toggle theme">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <circle cx="12" cy="12" r="10"/>
-                        <circle cx="12" cy="12" r="4"/>
-                        <line x1="12" y1="2" x2="12" y2="22"/>
-                        <line x1="2" y1="12" x2="22" y2="12"/>
-                    </svg>
-                    <div class="theme-dropdown">
-                        <div class="theme-option" data-theme="dark">
-                            <span class="color-swatch dark"></span>
-                            <span>Dark Theme</span>
-                        </div>
-                        <div class="theme-option" data-theme="light">
-                            <span class="color-swatch light"></span>
-                            <span>Light Theme</span>
-                        </div>
-                        <div class="theme-option" data-theme="green">
-                            <span class="color-swatch green"></span>
-                            <span>Green Theme</span>
-                        </div>
-                        <div class="theme-option" data-theme="purple">
-                            <span class="color-swatch purple"></span>
-                            <span>Purple Theme</span>
-                        </div>
-                    </div>
+                    Theme
                 </button>
             </div>
         </div>
