--- a/cvs-health.html
+++ b/cvs-health.html
@@ -138,7 +138,7 @@
         </div>
 
         <div class="project-content">
-            <p>I'm the lead design systems designer for our pattern library and I've helped increase design and development for our product launches.</p>
+            <p>I'm design systems designer for our pattern library and I've helped increase design and development for our product launches.</p>
             
             <h2>The Role</h2>
             <p>As the Lead Design Systems Designer at CVS Health, I'm responsible for maintaining and evolving our comprehensive pattern library that serves multiple product teams.</p>
@@ -151,6 +151,8 @@
                 <li>Implemented design tokens across the organization</li>
                 <li>Created comprehensive documentation</li>
                 <li>Established design system governance</li>
+                <li>Acted as a customer service agent to our designers regarding patterns and the use of components in the design system</li>
+                <li>Educated our designers on how to use Figma and the design system</li>
             </ul>
             
             <h2>Impact</h2>
