--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
 </head>
 <body>
     <div class="announcement-banner">
-        <div class="content">
-            <span>🎁 Download my free digital products</span>
-            <a href="https://jacobolenick1.gumroad.com" target="_blank">Visit Gumroad</a>
-            <button class="close-button" aria-label="Close banner">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <line x1="18" y1="6" x2="6" y2="18"></line>
-                    <line x1="6" y1="6" x2="18" y2="18"></line>
-                </svg>
-            </button>
-        </div>
+        <a href="https://jacobolenick1.gumroad.com" target="_blank" class="banner-link">
+            <div class="content">
+                <span>🎁 Download my free digital products</span>
+                <button class="close-button" aria-label="Close banner">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <line x1="18" y1="6" x2="6" y2="18"></line>
+                        <line x1="6" y1="6" x2="18" y2="18"></line>
+                    </svg>
+                </button>
+            </div>
+        </a>
     </div>
 
     <nav>
@@ -113,9 +114,9 @@
                     <h2>About</h2>
                     <p>I specialize in creating scalable design systems that bridge the gap between design and development. My approach focuses on simplicity, consistency, and user experience.</p>
                 </div>
-                <div class="about-image">
-                    <img src="jake.jpg" alt="Profile photo" />
-                </div>
+                <figure class="about-image">
+                    <img src="jake.jpg" alt="Profile photo" style="border-radius: 24px;" />
+                </figure>
             </div>
         </section>
 
@@ -129,25 +130,25 @@
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            Career growth and personal branding
+                            <span>Career growth and personal branding</span>
                         </li>
                         <li>
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            Career Growth in Product Design
+                            <span>Career Growth in Product Design</span>
                         </li>
                         <li>
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            Resume & portfolioreviews
+                            <span>Resume & portfolio reviews</span>
                         </li>
                         <li>
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M20 6L9 17L4 12" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
-                            Linkedin help and positioning
+                            <span>Linkedin help and positioning</span>
                         </li>
                     </ul>
                     <a href="https://www.linkedin.com/in/jacobmolenick" target="_blank" class="cta-button">Connect on LinkedIn</a>
