--- a/crtside.html
+++ b/crtside.html
@@ -90,6 +90,8 @@
         </div>
 
         <div class="project-content">
+
+            <img src="crt.jpg" alt="Crtside Design System" class="project-image">
             
             <h2>0-1 Design System and documentation for a sports app</h2>
             <p>Crtside's CEO hired me as a freelancer to build a design system and use the components and language from the design system to build the mobile app. Crtside is a consumer social media-like application for High School basketball athletes to land college scholarships and play at the college level. Scouts and coaches can also sign up for the application to watch these high school stars.</p>
