--- a/index.html
+++ b/index.html
@@ -98,8 +98,17 @@
                 </div>
             </a>
 
-            <a href="crtside.html" class="project">
+            <a href="wellsfargo.html" class="project">
                 <span class="project-number">04</span>
+                <h2>Wells Fargo Vantage</h2>
+                <p>Built a 0-1 new platform for businesses to bank better with Wells Fargo</p>
+                <div class="project-overlay">
+                    <img src="Wells Fargo.jpg" alt="Wells Fargo Vantage Preview">
+                </div>
+            </a>
+
+            <a href="crtside.html" class="project">
+                <span class="project-number">05</span>
                 <h2>Crtside</h2>
                 <p>Developed a comprehensive design system for a modern fintech platform, focusing on accessibility and scalability.</p>
                 <div class="project-overlay">
