Added project links at the bottom of each page
I added a feature where you can lick to see the previous case study and the next

--- a/credit-one.html
+++ b/credit-one.html
@@ -142,6 +142,10 @@
             <br>
             <img src="ui.jpg" alt="Credit One Bank Design System" class="project-image">
            
+            <div class="project-navigation" style="display: flex; justify-content: space-between; align-items: center; margin: 4rem auto; max-width: 600px;">
+                <a href="crtside.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">← Previous Project:<br>CRT Side</a>
+                <a href="wellsfargo.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">Next Project:<br>Wells Fargo →</a>
+            </div>
     
         </div>
     </main>
