--- a/crtside.html
+++ b/crtside.html
@@ -111,6 +111,11 @@
                 We used Notion for all the documentation so future designers or developers could see this information and understand how to use the design system.</p>
     <br>
     <img src="crtsideui.jpg" alt="Crtside Design System" class="project-image">
+            
+            <div class="project-navigation" style="display: flex; justify-content: space-between; align-items: center; margin: 4rem auto; max-width: 600px;">
+                <a href="orgspace.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">← Previous Project:<br>OrgSpace</a>
+                <a href="credit-one.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">Next Project:<br>Credit One Bank →</a>
+            </div>
         </div>
     </main>
 
