--- a/cvs-health.html
+++ b/cvs-health.html
@@ -163,6 +163,11 @@
                 <li>Better collaboration between design and development</li>
                 <li>Streamlined design review process</li>
             </ul>
+            
+            <div class="project-navigation" style="display: flex; justify-content: space-between; align-items: center; margin: 4rem auto; max-width: 600px;">
+                <a href="wellsfargo.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">← Previous Project:<br>Wells Fargo</a>
+                <a href="orgspace.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">Next Project:<br>OrgSpace →</a>
+            </div>
         </div>
     </main>
 
