--- a/orgspace.html
+++ b/orgspace.html
@@ -156,6 +156,10 @@
             <p> Then, we pushed them to Github.   </p>
             <img src="orgcolor.jpg" alt="Orgspace Design System" class="project-image">
             
+            <div class="project-navigation" style="display: flex; justify-content: space-between; align-items: center; margin: 4rem auto; max-width: 600px;">
+                <a href="cvs-health.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">← Previous Project:<br>CVS Health</a>
+                <a href="crtside.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">Next Project:<br>CRT Side →</a>
+            </div>
         </div>
     </main>
 
