--- a/wellsfargo.html
+++ b/wellsfargo.html
@@ -177,6 +177,10 @@
             <h2>Conclusion</h2>
             <p>I am proud of the work I contributed to the Vantage project. The platform has been a success and has helped Wells Fargo improve its customer experience. I am confident that it will continue to be a valuable asset to Wells Fargo for many years to come.</p>
             
+            <div class="project-navigation" style="display: flex; justify-content: space-between; align-items: center; margin: 4rem auto; max-width: 600px;">
+                <a href="credit-one.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">← Previous Project:<br>Credit One Bank</a>
+                <a href="cvs-health.html" style="color: var(--text-secondary); text-decoration: none; transition: color 0.3s ease;">Next Project:<br>CVS Health →</a>
+            </div>
         </div>
     </main>
 
