Changed the projects to cards

--- a/index.html
+++ b/index.html
@@ -72,47 +72,47 @@
 
         <section id="work">
             <a href="credit-one.html" class="project">
-                <span class="project-number">01</span>
-                <h2>Credit One Bank</h2>
-                <p>I worked on building a 0-1 design system for C1B's internal tools and it saved the company hundreds of thousands of dollars and increased work efficiency by 40%.</p>
-                <div class="project-overlay">
-                    <img src="c1b.jpg" alt="Credit One Bank Project Preview">
+                <img src="c1b.jpg" alt="Credit One Bank Project Preview">
+                <div class="project-content">
+                    <span class="project-number">01</span>
+                    <h2>Credit One Bank</h2>
+                    <p>I worked on building a 0-1 design system for C1B's internal tools and it saved the company hundreds of thousands of dollars and increased work efficiency by 40%.</p>
                 </div>
             </a>
 
             <a href="cvs-health.html" class="project">
-                <span class="project-number">02</span>
-                <h2>CVS Health</h2>
-                <p>I'm the lead design systems designer for our pattern library and I've helped increase design and development for our product launches.</p>
-                <div class="project-overlay">
-                    <img src="cvs.png" alt="CVS Health Project Preview">
+                <img src="cvs.png" alt="CVS Health Project Preview">
+                <div class="project-content">
+                    <span class="project-number">02</span>
+                    <h2>CVS Health</h2>
+                    <p>I'm the lead design systems designer for our pattern library and I've helped increase design and development for our product launches.</p>
                 </div>
             </a>
 
             <a href="orgspace.html" class="project">
-                <span class="project-number">03</span>
-                <h2>Orgspace</h2>
-                <p>Built a 0-1 design system in 3 months utilizing Figma, Tailwind, and Storybook.</p>
-                <div class="project-overlay">
-                    <img src="org.jpg" alt="Orgspace Project Preview">
+                <img src="org.jpg" alt="Orgspace Project Preview">
+                <div class="project-content">
+                    <span class="project-number">03</span>
+                    <h2>Orgspace</h2>
+                    <p>Built a 0-1 design system in 3 months utilizing Figma, Tailwind, and Storybook.</p>
                 </div>
             </a>
 
             <a href="wellsfargo.html" class="project">
-                <span class="project-number">04</span>
-                <h2>Wells Fargo Vantage</h2>
-                <p>Built a 0-1 new platform for businesses to bank better with Wells Fargo</p>
-                <div class="project-overlay">
-                    <img src="Wells Fargo.jpg" alt="Wells Fargo Vantage Preview">
+                <img src="Wells Fargo.jpg" alt="Wells Fargo Vantage Preview">
+                <div class="project-content">
+                    <span class="project-number">04</span>
+                    <h2>Wells Fargo Vantage</h2>
+                    <p>Built a 0-1 new platform for businesses to bank better with Wells Fargo</p>
                 </div>
             </a>
 
             <a href="crtside.html" class="project">
-                <span class="project-number">05</span>
-                <h2>Crtside</h2>
-                <p>Developed a comprehensive design system for a modern fintech platform, focusing on accessibility and scalability.</p>
-                <div class="project-overlay">
-                    <img src="crt.jpg" alt="Crtside Project Preview">
+                <img src="crt.jpg" alt="Crtside Project Preview">
+                <div class="project-content">
+                    <span class="project-number">05</span>
+                    <h2>Crtside</h2>
+                    <p>Developed a comprehensive design system for a modern fintech platform, focusing on accessibility and scalability.</p>
                 </div>
             </a>
         </section>
