--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
                 <a href="https://www.linkedin.com/in/jacobmolenick" target="_blank">LinkedIn</a>
                 <button class="theme-toggle" aria-label="Toggle theme">
                     Theme
+                    <div class="theme-dropdown">
+                        <div class="theme-option" data-theme="dark-blue">
+                            <div class="color-swatch dark-blue"></div>
+                            <span>Dark Blue</span>
+                        </div>
+                        <div class="theme-option" data-theme="light">
+                            <div class="color-swatch light"></div>
+                            <span>Light</span>
+                        </div>
+                        <div class="theme-option" data-theme="black">
+                            <div class="color-swatch black"></div>
+                            <span>Black</span>
+                        </div>
+                        <div class="theme-option" data-theme="green">
+                            <div class="color-swatch green"></div>
+                            <span>Green</span>
+                        </div>
+                        <div class="theme-option" data-theme="purple">
+                            <div class="color-swatch purple"></div>
+                            <span>Purple</span>
+                        </div>
+                    </div>
                 </button>
             </div>
         </div>
@@ -254,7 +276,7 @@
             // Theme toggle functionality
             const themeToggle = document.querySelector('.theme-toggle');
             const root = document.documentElement;
-            const themes = ['dark-blue', 'light', 'green', 'purple'];
+            const themes = ['dark-blue', 'light', 'black', 'green', 'purple'];
             
             // Check for saved theme preference
             const savedTheme = localStorage.getItem('theme') || 'dark-blue';
